improved Classes durability Now it's used an improved file xml to create Market Objects new Constructor is added to Market